language-server/src/tests/snapshots/gleam_language_server__tests__rename__rename_module_from_variant_in_const.snap
---
source: language-server/src/tests/rename.rs
expression: "\nimport option\n\nconst x = option   .None\n"
---
----- BEFORE RENAME
-- option.gleam
pub type Option(a) { Some(a) None }

-- app.gleam

import option

const x = option   .None
          ↑▔▔▔▔▔        


----- AFTER RENAME
-- option.gleam
pub type Option(a) { Some(a) None }

-- app.gleam

import option as opt

const x = opt   .None
